[package]
name = "rust-redis"
version = "0.1.0"
authors = ["qiongtubao <810776886@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio_server = {path="./libs/mio_server"}
rocket = "0.4.2"
rocket_contrib = "0.4.2"
quote = "0.6.1"
mio ={version = "0.7.0", features = ["os-poll", "tcp"]}
itoa = "0.4.3"
chrono = "0.4"